# excel-interpreter

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon  justfile
.github/workflows/: release.yml
python/excel_interpreter_py/: pyproject.toml
tests/corpus/: README.md
ts/excel-interpreter-ts/: README.md  package.json
