[project]
name = "excel-interpreter-py"
version = "0.1.0"
description = "Python utilities for evaluating Excel formulas and building expressions"
readme = "README.md"
authors = [
    { name = "Erwin Kuhn", email = "erwin.kuhn@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
